--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -223,3 +223,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
+
